--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <style name="appbar_title">
         <item name="android:textSize">@dimen/_17sdp</item>
         <item name="fontFamily">@font/azo_sans_medium</item>
