--- a/app/src/main/res/drawable/rounded_rectangle_gray.xml
+++ b/app/src/main/res/drawable/rounded_rectangle_gray.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android"
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:textColor="@color/elektra_gray"/>
     <solid android:color="@color/elektra_light_gray"/>
-    <corners android:radius="8dp"/>
-</selector>
+    <corners android:radius="@dimen/_15sdp"/>
+    <solid android:textColor="@color/elektra_gray"/>
+</shape>
