--- a/app/src/main/res/drawable/rounded_rectangle_red.xml
+++ b/app/src/main/res/drawable/rounded_rectangle_red.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@color/elektra_red"/>
-    <corners android:radius="8dp"/>
+    <corners android:radius="@dimen/_15sdp"/>
     <solid android:textColor="@color/white"/>
 </shape>
