Se realiza ajuste de pantalla terminos y condiciones de acuerdo con prototipo XD

--- a/app/src/main/res/layout/fragment_ektp_create_account_contracts.xml
+++ b/app/src/main/res/layout/fragment_ektp_create_account_contracts.xml
@@ -1,13 +1,218 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_width="match_parent">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/appbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/elektra_red"
+            android:minHeight="?attr/actionBarSize"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="?attr/actionBarSize">
+
+                <ImageView
+                    android:id="@+id/logoAppBar"
+                    android:layout_width="@dimen/_71sdp"
+                    android:layout_height="@dimen/_26sdp"
+                    android:layout_marginEnd="@dimen/_35sdp"
+                    android:background="@drawable/ic_appbar_logo"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/sectionTitleAppbarTextView"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_82sdp"
+                    android:layout_marginEnd="@dimen/_23sdp"
+                    android:gravity="center"
+                    android:text="@string/terms_and_conditions_header_label"
+                    android:theme="@style/appbar_title"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/logoAppBar"
+                    app:layout_constraintStart_toEndOf="@+id/backAppbarButton"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageButton
+                    android:id="@+id/backAppbarButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_12sdp"
+                    android:background="@drawable/ic_appbar_back_button"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
 
-    </LinearLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.appcompat.widget.Toolbar>
 
+        <ScrollView
+            android:id="@+id/scrollId"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/appbar">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/term1TextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:layout_marginStart="@dimen/_43sdp"
+                    android:layout_marginTop="@dimen/_60sdp"
+                    android:text="@string/fragment_terms_privacity"
+                    android:theme="@style/text_button_1"
+                    app:layout_constraintBottom_toTopOf="@id/term2TextView"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/term2TextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:layout_marginStart="@dimen/_43sdp"
+                    android:layout_marginTop="@dimen/_16sdp"
+                    android:text="@string/fragment_terms_banking"
+                    android:theme="@style/text_button_1"
+                    app:layout_constraintBottom_toTopOf="@id/term3TextView"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/term1TextView" />
+
+                <TextView
+                    android:id="@+id/term3TextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:layout_marginStart="@dimen/_43sdp"
+                    android:layout_marginTop="@dimen/_16sdp"
+                    android:text="@string/fragment_terms_terms_and_conditions"
+                    android:theme="@style/text_button_1"
+                    app:layout_constraintBottom_toTopOf="@id/term4TextView"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/term2TextView" />
+
+                <TextView
+                    android:id="@+id/term4TextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:layout_marginStart="@dimen/_43sdp"
+                    android:layout_marginTop="@dimen/_16sdp"
+                    android:text="@string/fragment_terms_credit_bureau"
+                    android:theme="@style/text_button_1"
+                    app:layout_constraintBottom_toTopOf="@id/term5TextView"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/term3TextView" />
+
+                <TextView
+                    android:id="@+id/term5TextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:layout_marginStart="@dimen/_43sdp"
+                    android:layout_marginTop="@dimen/_16sdp"
+                    android:text="@string/fragment_terms_credimax"
+                    android:theme="@style/text_button_1"
+                    app:layout_constraintBottom_toTopOf="@id/term6TextView"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/term4TextView" />
+
+                <TextView
+                    android:id="@+id/term6TextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:layout_marginStart="@dimen/_43sdp"
+                    android:layout_marginTop="@dimen/_16sdp"
+                    android:text="@string/fragment_terms_captation"
+                    android:theme="@style/text_button_1"
+                    app:layout_constraintBottom_toTopOf="@id/term7TextView"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/term5TextView" />
+
+                <TextView
+                    android:id="@+id/term7TextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:layout_marginStart="@dimen/_43sdp"
+                    android:layout_marginTop="@dimen/_16sdp"
+                    android:text="@string/fragment_terms_digital"
+                    android:theme="@style/text_button_1"
+                    app:layout_constraintBottom_toTopOf="@id/term8TextView"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/term6TextView" />
+
+                <TextView
+                    android:id="@+id/term8TextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:layout_marginStart="@dimen/_43sdp"
+                    android:layout_marginTop="@dimen/_16sdp"
+                    android:text="@string/fragment_terms_captation_products"
+                    android:theme="@style/text_button_1"
+                    app:layout_constraintBottom_toTopOf="@id/acceptanceCheckbox"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/term7TextView" />
+
+                <CheckBox
+                    android:id="@+id/acceptanceCheckbox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_40sdp"
+                    android:buttonTint="@color/elektra_yellow"
+                    android:checked="false"
+                    android:gravity="start"
+                    android:paddingStart="@dimen/_8sdp"
+                    android:text="@string/fragment_terms_have_readed"
+                    android:theme="@style/checkbox_text"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/term8TextView" />
+
+                <Button
+                    android:id="@+id/termsContinueButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:layout_marginStart="@dimen/_43sdp"
+                    android:layout_marginTop="@dimen/_90sdp"
+                    android:layout_marginBottom="@dimen/_54sdp"
+                    android:layout_marginEnd="@dimen/_43sdp"
+                    android:theme="@style/bottom_button"
+                    android:text="@string/continue_button"
+                    android:background="@drawable/enable_disable_red"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/acceptanceCheckbox" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </ScrollView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
