Se ajusta navegación entre fragmentos del flujo creación de cuenta

--- a/app/src/main/res/navigation/create_account_navigator.xml
+++ b/app/src/main/res/navigation/create_account_navigator.xml
@@ -19,14 +19,17 @@
         <action
             android:id="@+id/action_EKTPCreateAccountSMSVerificationFragment_to_EKPTCreateAccountRegisterFormFragment"
             app:destination="@id/EKPTCreateAccountRegisterFormFragment" />
+        <action
+            android:id="@+id/action_EKTPCreateAccountSMSVerificationFragment_to_EKTPCreateAccountFragment2"
+            app:destination="@id/EKTPCreateAccountFragment" />
     </fragment>
     <fragment
         android:id="@+id/EKPTCreateAccountRegisterFormFragment"
         android:name="com.elektra.ektp.ektpcreateaccount.view.EKPTCreateAccountRegisterFormFragment"
         android:label="EKPTCreateAccountRegisterFormFragment" >
         <action
-            android:id="@+id/action_EKPTCreateAccountRegisterFormFragment_to_EKTPCreateAccountContractsFragment"
-            app:destination="@id/EKTPCreateAccountContractsFragment" />
+            android:id="@+id/action_EKPTCreateAccountRegisterFormFragment_to_EKTPCreateAccountFragment"
+            app:destination="@id/EKTPCreateAccountFragment" />
     </fragment>
     <fragment
         android:id="@+id/EKTPCreateAccountContractsFragment"
@@ -43,15 +46,14 @@
         <action
             android:id="@+id/action_EKTPCreateAccountCreatePassFragment_to_EKTPCreateAccountBiometricsActivationFragment"
             app:destination="@id/EKTPCreateAccountBiometricsActivationFragment" />
+        <action
+            android:id="@+id/action_EKTPCreateAccountCreatePassFragment_to_EKTPCreateAccountContractsFragment"
+            app:destination="@id/EKTPCreateAccountContractsFragment" />
     </fragment>
     <fragment
         android:id="@+id/EKTPCreateAccountBiometricsActivationFragment"
         android:name="com.elektra.ektp.ektpcreateaccount.view.EKTPCreateAccountBiometricsActivationFragment"
-        android:label="EKTPCreateAccountBiometricsActivationFragment" >
-        <action
-            android:id="@+id/action_EKTPCreateAccountBiometricsActivationFragment_to_EKTPCreateAccountSuccessfulFragment"
-            app:destination="@id/EKTPCreateAccountSuccessfulFragment" />
-    </fragment>
+        android:label="EKTPCreateAccountBiometricsActivationFragment" />
     <fragment
         android:id="@+id/EKTPCreateAccountSuccessfulFragment"
         android:name="com.elektra.ektp.ektpcreateaccount.view.EKTPCreateAccountSuccessfulFragment"
