--- a/app/src/main/res/layout/fragment_create_account.xml
+++ b/app/src/main/res/layout/fragment_create_account.xml
@@ -301,10 +301,12 @@
                     android:layout_marginTop="@dimen/_8sdp"
                     android:layout_marginEnd="@dimen/_31sdp"
                     android:padding="@dimen/_10sdp"
+                    android:entries="@array/estados"
                     android:focusable="true"
                     android:focusableInTouchMode="true"
                     android:background="@drawable/rounded_rectangle_gray"
                     android:theme="@style/hint_edit_text"
+                    android:spinnerMode="dropdown"
                     app:layout_constraintTop_toBottomOf="@id/birthSiteLabel"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"/>
