--- a/app/src/main/res/layout/fragment_ekpt_create_account_register_form.xml
+++ b/app/src/main/res/layout/fragment_ekpt_create_account_register_form.xml
@@ -540,6 +540,7 @@
                     android:layout_marginTop="@dimen/_8sdp"
                     android:layout_marginEnd="@dimen/_31sdp"
                     android:padding="@dimen/_10sdp"
+                    android:entries="@array/country"
                     android:background="@drawable/rounded_rectangle_gray"
                     android:theme="@style/hint_edit_text"
                     app:layout_constraintTop_toBottomOf="@id/countryLabel"
@@ -574,6 +575,7 @@
                     android:layout_marginEnd="@dimen/_31sdp"
                     android:background="@drawable/rounded_rectangle_gray"
                     android:theme="@style/hint_edit_text"
+                    android:entries="@array/estados"
                     android:padding="@dimen/_10sdp"
                     app:layout_constraintTop_toBottomOf="@id/stateLabel"
                     app:layout_constraintStart_toStartOf="parent"
@@ -606,6 +608,7 @@
                     android:layout_marginEnd="@dimen/_31sdp"
                     android:background="@drawable/rounded_rectangle_gray"
                     android:theme="@style/hint_edit_text"
+                    android:entries="@array/estados"
                     android:padding="@dimen/_10sdp"
                     app:layout_constraintTop_toBottomOf="@id/townHallLabel"
                     app:layout_constraintStart_toStartOf="parent"
